--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,12 @@ h1 {
   background-color: #004d00;
 }
 
-.navbar .nav-link, .navbar-brand {
+.navbar-brand {
+  color: #004d00; 
+  font-weight: bold;
+}
+
+.navbar .nav-link {
   color: #ffffff !important;
 }
 
