--- a/styles/style.css
+++ b/styles/style.css
@@ -15,16 +15,12 @@ h1 {
 }
 
 .navbar-brand {
-  color: #004d00; 
+  color: #ffffff !important; 
   font-weight: bold;
 }
 
 .navbar .nav-link {
   color: #ffffff !important;
-}
-
-.nav-link:hover {
-  text-decoration: underline;
 }
 
 .card {
